// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`range [snapshot] > default 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_d9_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 1.932367149758454%; --relative-size: 96.1352657004831%; inset-inline-start: var(--start-position); width: var(--relative-size);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_da_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 1.932367149758454%;"
        >
          <input
            aria-label="Range (min)"
            aria-orientation="horizontal"
            aria-valuenow="0"
            aria-valuetext="0 start range"
            id="base-ui-_r_db_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="0"
          />
        </div>
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="1"
          data-orientation="horizontal"
          id="base-ui-_r_dd_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 98.06763285024155%;"
        >
          <input
            aria-label="Range (max)"
            aria-orientation="horizontal"
            aria-valuenow="100"
            aria-valuetext="100 end range"
            id="base-ui-_r_de_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="100"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`range [snapshot] > disabled 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-range"
    data-disabled=""
    data-orientation="horizontal"
    id="base-ui-_r_es_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-disabled=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-disabled=""
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-disabled=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 1.932367149758454%; --relative-size: 96.1352657004831%; inset-inline-start: var(--start-position); width: var(--relative-size);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-disabled=""
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_et_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 1.932367149758454%;"
        >
          <input
            aria-label="Range (min)"
            aria-orientation="horizontal"
            aria-valuenow="0"
            aria-valuetext="0 start range"
            disabled=""
            id="base-ui-_r_eu_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="0"
          />
        </div>
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-disabled=""
          data-index="1"
          data-orientation="horizontal"
          id="base-ui-_r_f0_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 98.06763285024155%;"
        >
          <input
            aria-label="Range (max)"
            aria-orientation="horizontal"
            aria-valuenow="100"
            aria-valuetext="100 end range"
            disabled=""
            id="base-ui-_r_f1_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="100"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`range [snapshot] > variant: default 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <label
    class="vesper-typography vesper-typography-label-sm vesper-form-input-wrapper-label"
    for="base-ui-_r_fp_"
    id="_r_fm_"
  >
    Label text
  </label>
  <div
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_fn_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 1.932367149758454%; --relative-size: 96.1352657004831%; inset-inline-start: var(--start-position); width: var(--relative-size);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_fo_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 1.932367149758454%;"
        >
          <input
            aria-describedby="_r_fl_"
            aria-label="Range (min)"
            aria-labelledby="_r_fm_"
            aria-orientation="horizontal"
            aria-valuenow="0"
            aria-valuetext="0 start range"
            id="base-ui-_r_fp_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="0"
          />
        </div>
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="1"
          data-orientation="horizontal"
          id="base-ui-_r_fr_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 98.06763285024155%;"
        >
          <input
            aria-describedby="_r_fl_"
            aria-label="Range (max)"
            aria-orientation="horizontal"
            aria-valuenow="100"
            aria-valuetext="100 end range"
            id="base-ui-_r_fs_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="100"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="true"
    id="_r_fl_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M18.1582 3L21 5.8418V18.1582L18.1582 21H5.8418L3 18.1582V5.8418L5.8418 3H18.1582ZM11.4941 9.97461L10.9873 10.4814V16.5566L11.4941 17.0625H12.5059L13.0127 16.5566V10.4814L12.5059 9.97461H11.4941ZM11.4941 6.9375L10.9873 7.44336V8.45605L11.4941 8.96289H12.5059L13.0127 8.45605V7.44336L12.5059 6.9375H11.4941Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`range [snapshot] > variant: error 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <label
    class="vesper-typography vesper-typography-label-sm vesper-form-input-wrapper-label"
    for="base-ui-_r_gb_"
    id="_r_g8_"
  >
    Label text
  </label>
  <div
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_g9_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 1.932367149758454%; --relative-size: 96.1352657004831%; inset-inline-start: var(--start-position); width: var(--relative-size);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_ga_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 1.932367149758454%;"
        >
          <input
            aria-describedby="_r_g7_"
            aria-label="Range (min)"
            aria-labelledby="_r_g8_"
            aria-orientation="horizontal"
            aria-valuenow="0"
            aria-valuetext="0 start range"
            id="base-ui-_r_gb_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="0"
          />
        </div>
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="1"
          data-orientation="horizontal"
          id="base-ui-_r_gd_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 98.06763285024155%;"
        >
          <input
            aria-describedby="_r_g7_"
            aria-label="Range (max)"
            aria-orientation="horizontal"
            aria-valuenow="100"
            aria-valuetext="100 end range"
            id="base-ui-_r_ge_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="100"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-error"
    data-message="true"
    id="_r_g7_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M21 8V16L16 21H8L3 16V8L8 3H16L21 8ZM11.4932 15.2422L10.9766 15.7578V16.7881L11.4932 17.3027H12.5264L13.042 16.7881V15.7578L12.5264 15.2422H11.4932ZM11.2354 7L10.7188 7.51562L11.2354 13.6973L11.751 14.2119H12.2676L12.7842 13.6973L13.3008 7.51562L12.7842 7H11.2354Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`range [snapshot] > variant: success 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <label
    class="vesper-typography vesper-typography-label-sm vesper-form-input-wrapper-label"
    for="base-ui-_r_gk_"
    id="_r_gh_"
  >
    Label text
  </label>
  <div
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_gi_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 1.932367149758454%; --relative-size: 96.1352657004831%; inset-inline-start: var(--start-position); width: var(--relative-size);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_gj_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 1.932367149758454%;"
        >
          <input
            aria-describedby="_r_gg_"
            aria-label="Range (min)"
            aria-labelledby="_r_gh_"
            aria-orientation="horizontal"
            aria-valuenow="0"
            aria-valuetext="0 start range"
            id="base-ui-_r_gk_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="0"
          />
        </div>
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="1"
          data-orientation="horizontal"
          id="base-ui-_r_gm_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 98.06763285024155%;"
        >
          <input
            aria-describedby="_r_gg_"
            aria-label="Range (max)"
            aria-orientation="horizontal"
            aria-valuenow="100"
            aria-valuetext="100 end range"
            id="base-ui-_r_gn_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="100"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-success"
    data-message="true"
    id="_r_gg_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM16.2402 8.2959L9.79102 14.4355H9.7793L7.75977 12.5127L7.58691 12.3486L7.41504 12.5127L6.82715 13.0713L6.6377 13.252L6.82715 13.4336L9.16406 15.6572L9.23633 15.7266H10.334L10.4062 15.6572L17.1729 9.2168L17.3623 9.03516L17.1729 8.85449L16.585 8.2959L16.4131 8.13184L16.2402 8.2959Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`range [snapshot] > variant: warning 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <label
    class="vesper-typography vesper-typography-label-sm vesper-form-input-wrapper-label"
    for="base-ui-_r_g2_"
    id="_r_fv_"
  >
    Label text
  </label>
  <div
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_g0_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 1.932367149758454%; --relative-size: 96.1352657004831%; inset-inline-start: var(--start-position); width: var(--relative-size);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_g1_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 1.932367149758454%;"
        >
          <input
            aria-describedby="_r_fu_"
            aria-label="Range (min)"
            aria-labelledby="_r_fv_"
            aria-orientation="horizontal"
            aria-valuenow="0"
            aria-valuetext="0 start range"
            id="base-ui-_r_g2_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="0"
          />
        </div>
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="1"
          data-orientation="horizontal"
          id="base-ui-_r_g4_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 98.06763285024155%;"
        >
          <input
            aria-describedby="_r_fu_"
            aria-label="Range (max)"
            aria-orientation="horizontal"
            aria-valuenow="100"
            aria-valuetext="100 end range"
            id="base-ui-_r_g5_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="100"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-warning"
    data-message="true"
    id="_r_fu_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M22 18.5537L20.876 20.5H3.10352L2 18.5898L10.9658 3.5H13.0557L22 18.5537ZM11.4932 16.2422L10.9766 16.7578V17.7881L11.4932 18.3027H12.5264L13.042 17.7881V16.7578L12.5264 16.2422H11.4932ZM11.2354 8L10.7188 8.51562L11.2354 14.6973L11.751 15.2119H12.2676L12.7842 14.6973L13.3008 8.51562L12.7842 8H11.2354Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`range [snapshot] > with custom min/max/step 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_di_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 1.932367149758454%; --relative-size: 96.1352657004831%; inset-inline-start: var(--start-position); width: var(--relative-size);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_dj_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 1.932367149758454%;"
        >
          <input
            aria-label="Range (min)"
            aria-orientation="horizontal"
            aria-valuenow="0"
            aria-valuetext="0 start range"
            id="base-ui-_r_dk_"
            max="10"
            min="0"
            step="2"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="0"
          />
        </div>
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="1"
          data-orientation="horizontal"
          id="base-ui-_r_dm_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 98.06763285024155%;"
        >
          <input
            aria-label="Range (max)"
            aria-orientation="horizontal"
            aria-valuenow="10"
            aria-valuetext="10 end range"
            id="base-ui-_r_dn_"
            max="10"
            min="0"
            step="2"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`range [snapshot] > with label 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <label
    class="vesper-typography vesper-typography-label-sm vesper-form-input-wrapper-label"
    for="base-ui-_r_f7_"
    id="_r_f4_"
  >
    Label text
  </label>
  <div
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_f5_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 1.932367149758454%; --relative-size: 96.1352657004831%; inset-inline-start: var(--start-position); width: var(--relative-size);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_f6_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 1.932367149758454%;"
        >
          <input
            aria-label="Range (min)"
            aria-labelledby="_r_f4_"
            aria-orientation="horizontal"
            aria-valuenow="0"
            aria-valuetext="0 start range"
            id="base-ui-_r_f7_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="0"
          />
        </div>
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="1"
          data-orientation="horizontal"
          id="base-ui-_r_f9_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 98.06763285024155%;"
        >
          <input
            aria-label="Range (max)"
            aria-orientation="horizontal"
            aria-valuenow="100"
            aria-valuetext="100 end range"
            id="base-ui-_r_fa_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="100"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`range [snapshot] > with message 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_fe_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 1.932367149758454%; --relative-size: 96.1352657004831%; inset-inline-start: var(--start-position); width: var(--relative-size);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_ff_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 1.932367149758454%;"
        >
          <input
            aria-describedby="_r_fc_"
            aria-label="Range (min)"
            aria-orientation="horizontal"
            aria-valuenow="0"
            aria-valuetext="0 start range"
            id="base-ui-_r_fg_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="0"
          />
        </div>
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="1"
          data-orientation="horizontal"
          id="base-ui-_r_fi_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 98.06763285024155%;"
        >
          <input
            aria-describedby="_r_fc_"
            aria-label="Range (max)"
            aria-orientation="horizontal"
            aria-valuenow="100"
            aria-valuetext="100 end range"
            id="base-ui-_r_fj_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="100"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="true"
    id="_r_fc_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M18.1582 3L21 5.8418V18.1582L18.1582 21H5.8418L3 18.1582V5.8418L5.8418 3H18.1582ZM11.4941 9.97461L10.9873 10.4814V16.5566L11.4941 17.0625H12.5059L13.0127 16.5566V10.4814L12.5059 9.97461H11.4941ZM11.4941 6.9375L10.9873 7.44336V8.45605L11.4941 8.96289H12.5059L13.0127 8.45605V7.44336L12.5059 6.9375H11.4941Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`range [snapshot] > with multiple values 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-range vesper-range-labeled"
    data-orientation="horizontal"
    id="base-ui-_r_ed_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 21.15942028985507%; --relative-size: 57.68115942028985%; inset-inline-start: var(--start-position); width: var(--relative-size);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_ee_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 21.15942028985507%; --vesper-range-thumb-label: "A";"
        >
          <input
            aria-label="Range (min)"
            aria-orientation="horizontal"
            aria-valuenow="20"
            id="base-ui-_r_ef_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="20"
          />
        </div>
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
          data-index="1"
          data-orientation="horizontal"
          id="base-ui-_r_eh_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 40.386473429951685%; --vesper-range-thumb-label: "B";"
        >
          <input
            aria-label="Range (max)"
            aria-orientation="horizontal"
            aria-valuenow="40"
            id="base-ui-_r_ei_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="40"
          />
        </div>
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
          data-index="2"
          data-orientation="horizontal"
          id="base-ui-_r_ek_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 59.613526570048315%; --vesper-range-thumb-label: "C";"
        >
          <input
            aria-orientation="horizontal"
            aria-valuenow="60"
            id="base-ui-_r_el_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="60"
          />
        </div>
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
          data-index="3"
          data-orientation="horizontal"
          id="base-ui-_r_en_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 78.84057971014492%; --vesper-range-thumb-label: "D";"
        >
          <input
            aria-orientation="horizontal"
            aria-valuenow="80"
            id="base-ui-_r_eo_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="80"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`range [snapshot] > with ticks 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-range"
    data-orientation="horizontal"
    id="base-ui-_r_dr_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <span
          class="vesper-range-tick"
          style="--vesper-range-tick-position: 0.2;"
        />
        <span
          class="vesper-range-tick"
          style="--vesper-range-tick-position: 0.4;"
        />
        <span
          class="vesper-range-tick"
          style="--vesper-range-tick-position: 0.6;"
        />
        <span
          class="vesper-range-tick"
          style="--vesper-range-tick-position: 0.8;"
        />
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 1.932367149758454%; --relative-size: 96.1352657004831%; inset-inline-start: var(--start-position); width: var(--relative-size);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_ds_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 1.932367149758454%;"
        >
          <input
            aria-label="Range (min)"
            aria-orientation="horizontal"
            aria-valuenow="0"
            aria-valuetext="0 start range"
            id="base-ui-_r_dt_"
            max="5"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="0"
          />
        </div>
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
          data-index="1"
          data-orientation="horizontal"
          id="base-ui-_r_dv_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 98.06763285024155%;"
        >
          <input
            aria-label="Range (max)"
            aria-orientation="horizontal"
            aria-valuenow="5"
            aria-valuetext="5 end range"
            id="base-ui-_r_e0_"
            max="5"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="5"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`range [snapshot] > with value labels 1`] = `
<div
  class="vesper-form-input-wrapper"
>
  <div
    class="vesper-range vesper-range-labeled"
    data-orientation="horizontal"
    id="base-ui-_r_e4_"
    role="group"
  >
    <div
      data-base-ui-slider-control=""
      data-orientation="horizontal"
    >
      <div
        class="vesper-range-track"
        data-orientation="horizontal"
        style="position: relative;"
      >
        <div
          class="vesper-range-range"
          data-base-ui-slider-indicator=""
          data-orientation="horizontal"
          style="position: relative; height: inherit; --start-position: 1.932367149758454%; --relative-size: 96.1352657004831%; inset-inline-start: var(--start-position); width: var(--relative-size);"
        />
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-_r_e5_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 1.932367149758454%; --vesper-range-thumb-label: "Min";"
        >
          <input
            aria-label="Range (min)"
            aria-orientation="horizontal"
            aria-valuenow="0"
            aria-valuetext="0 start range"
            id="base-ui-_r_e6_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="0"
          />
        </div>
        <div
          class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
          data-index="1"
          data-orientation="horizontal"
          id="base-ui-_r_e8_"
          style="position: absolute; inset-inline-start: var(--position); top: 50%; translate: -50% -50%; --position: 98.06763285024155%; --vesper-range-thumb-label: "Max";"
        >
          <input
            aria-label="Range (max)"
            aria-orientation="horizontal"
            aria-valuenow="100"
            aria-valuetext="100 end range"
            id="base-ui-_r_e9_"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="100"
          />
        </div>
      </div>
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;
